--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-airbnb": "^15.1.0",
     "eslint-formatter-pretty": "^1.1.0",
     "eslint-loader": "^1.9.0",
+    "gh-pages": "^2.0.1",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.0",
     "gulp-cheerio": "^0.6.2",
